<resources>
    <string name="pull_to_refresh_pull_label">下拉可以刷新...…</string>
    <string name="pull_to_refresh_release_label">松开即可刷新...…</string>
    <string name="pull_to_refresh_refreshing_label">加载中...…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">上拉可以刷新…</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_last_update_label">最后更新:</string>
    <string name="refresh">刷新</string>
    <string name="app_cancel">取消</string>
    <string name="app_name">QQ提醒</string>
    <string name="update_current_version">当前版本:</string>
    <string name="update_latest_version">最新版本:</string>
    <string name="update_found_new_version">版本更新</string>
    <string name="update_cancel_update">下次再说</string>
    <string name="update_update_now">立即更新</string>
    <string name="update_force_udpate_title">系统更新</string>
    <string name="update_force_udpate_content">您目前的版本已经停止维护，请更新</string>
    <string name="update">更新</string>
    <string name="update_dialog_never_update">该版本不再提醒</string>
    <string name="update_downloading">正在下载中...</string>
    <string name="update_start_download">开始下载...</string>
    <string name="update_download_failed">下载更新文件失败</string>
    <string name="update_had_download">已下载</string>
    <string name="update_software">软件更新</string>
    <string name="update_show_title">版本更新</string>
    <string name="update_show_content">下载进度</string>
    <string name="update_show_cancel_update">取消下载</string>
    <string name="update_show_min_update">后台下载</string>
    <string name="empty" />
    <string name="begin_time">开始时间</string>
    <string name="title">标题</string>
    <string name="cycle">重复</string>
    <string name="remind">提醒</string>
    <string name="alarm_remind">闹钟提醒</string>
    <string name="ring">铃声</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="set">设置</string>
    <string name="see">查看</string>
    <string name="none">无</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="today">今天</string>
    <string name="birthday">生日</string>
    <string name="star">星座</string>
    <string name="animal_figure">生肖</string>
    <string name="above_is_expire_event">以上是已到期提醒</string>
    <string name="no_tips_setted">还没设置任何提醒</string>
    <string name="label_right_no_event">还没设置任何提醒</string>
    <string name="have_no_event">还没有任何提醒</string>
    <string name="add_schedule_event">添加日程提醒</string>
    <string name="import_friend_birth_success">成功导入%d个好友的生日</string>
    <string name="import_friend_birth_fail">导入好友生日失败</string>
    <string name="right_top_title_all_reminds">全部提醒</string>
    <string name="right_top_title_custom_reminds">自定义提醒</string>
    <string name="right_top_title_birthday_reminds">生日提醒</string>
    <string name="right_top_title_activity_reminds">活动提醒</string>
    <string name="right_top_title_game_reminds">游戏提醒</string>
    <string name="importing_birthday_tips">正在导入</string>
    <string name="loading_friends_info_tips">正在读取好友列表</string>
    <string name="load_friends_info_fail_tips">读取好友列表失败，请稍后再试</string>
    <string name="load_qq_friends_info_empty">对不起，您的QQ好友列表为空！</string>
    <string name="load_pengyou_friends_info_empty">对不起，您的朋友网好友列表为空！</string>
    <string name="remind_time">提醒时间</string>
    <string name="save">保存</string>
    <string name="every_day">每天</string>
    <string name="work_day">工作日</string>
    <string name="tomorrow">明天</string>
    <string name="aftertomorrow">后天</string>
    <string name="next_week">下</string>
    <string name="label_allday_event">全天</string>
    <string name="label_date">日期</string>
    <string name="birthday_subfix" formatted="false">的%d岁生日 %s</string>
    <string name="net_unreach">您当前网络不佳，请稍后再试</string>
    <string name="user_not_login">用户未登录，最大可能是密码有更改</string>
    <string name="event_before_remind">提醒设置</string>
    <string name="label_add_one_birth">添加一个</string>
    <string name="label_batch_import">批量导入</string>
    <string name="label_import_from_qq">从QQ好友导入</string>
    <string name="label_import_from_pengyou">从腾讯朋友网好友导入</string>
    <string name="label_import_from_pengyou_short">从朋友网导入</string>
    <string name="label_edit_birthday">编辑生日</string>
    <string name="label_create_birthday">新建生日</string>
    <string name="dialog_update_never">版本不再提醒</string>
    <string name="dialog_title_tips">提示</string>
    <string name="dialog_title_add_shortcut">是否要在桌面创建快捷方式？</string>
    <string name="dialog_network_not_available">当前网络不可用，是否现在设置网络？</string>
    <string name="click_view_detail">点击查看详情</string>
    <string name="commit_verify_code">提交验证码</string>
    <string name="refresh_verify_code">刷新验证码</string>
    <string name="desc_add_remind">新增提醒</string>
    <string name="desc_set_begin_time">设置开始时间</string>
    <string name="desc_set_end_time">设置结束时间</string>
    <string name="desc_set_before_remind">设置提前提醒</string>
    <string name="desc_set_repeat">设置重复提醒</string>
    <string name="desc_set_ringtone">设置提醒铃声</string>
    <string name="flow_statistics">流量统计</string>
    <string name="clearFlowData">清理数据从头计数</string>
    <string name="warn_no_available_network">没有可用网络</string>
    <string name="warn_get_applist_fail">获取服务器游戏列表失败，请稍候再试</string>
    <string name="delete_event">删除提醒</string>
    <string name="delete_alarm">删除闹钟</string>
    <string name="delete_birthday">删除生日</string>
    <string name="label_birthday_detail">生日详情</string>
    <string name="label_event_detail">提醒详情</string>
    <string name="label_search_friends">搜索好友</string>
    <string name="label_begin">开始</string>
    <string name="label_end">结束</string>
    <string name="label_note">备忘</string>
    <string name="label_remarks">备注</string>
    <string name="hint_require_field">必填</string>
    <string name="label_birthday_name">姓名</string>
    <string name="label_birthday_birth">生日</string>
    <string name="edit_birth_title">生日</string>
    <string name="please_input_title">请输入标题</string>
    <string name="name_too_long">名字不能太长</string>
    <string name="select_friend_no_more_than">最多只能选择%d位好友</string>
    <string name="please_input_event_title">请输入事件标题</string>
    <string name="alarm_label_exceeds_70">标签太长了，请不要超过70个字</string>
    <string name="alarm_remain" formatted="false">闹钟设置为离现在%d小时%d分钟</string>
    <string name="alarm_remain_nomin">闹钟设置为离现在%d小时</string>
    <string name="alarm_label_is_null">标签为空，请输入标签</string>
    <string name="event_title_exceeds_70">标题最多可以输入70个字，您已输入了：%d</string>
    <string name="please_input_name">请输入名字</string>
    <string name="game_event_list_enter_app">进入应用</string>
    <string name="game_event_list_no_event">暂时没有此应用的提醒</string>
    <string name="game_event_list_noapp_nowap">此应用目前不支持wap版</string>
    <string name="game_event_list_group_before">%d天前</string>
    <string name="problem_feedback">遇到问题或建议，反馈一下</string>
    <string name="problem_feedback_title">问题反馈</string>
    <string name="like_feedback">喜欢用，去给我们评价一下</string>
    <string name="product_description">产品介绍</string>
    <string name="my_calendar">全部提醒</string>
    <string name="edit_event_title">自定义提醒</string>
    <string name="edit_event_back">返回</string>
    <string name="edit_event_create">创建</string>
    <string name="edit_event_remind_set">已设置%d个提醒</string>
    <string name="optional_input">选填</string>
    <string name="event_remind_15min">15分钟前</string>
    <string name="event_before_remind_more_than_3">最多只能选择3个提醒</string>
    <string name="setting_back">返回</string>
    <string name="setting_title">设置</string>
    <string name="setting_account_manager">帐号设置</string>
    <string name="setting_account_not_logined">未设置帐号</string>
    <string name="setting_normal_setting">基本设置</string>
    <string name="setting_game">游戏提醒设置</string>
    <string name="setting_base">基本设置</string>
    <string name="setting_about">关于</string>
    <string name="setting_improve">加入用户体验改善计划</string>
    <string name="setting_improve_title">用户体验计划</string>
    <string name="base_setting_location">地理位置设置</string>
    <string name="base_setting_city">城市</string>
    <string name="base_setting_city_autolocation">自动定位 …</string>
    <string name="city_setting_autolocate_city">当前定位的城市</string>
    <string name="city_setting_hotcity">热门城市</string>
    <string name="city_setting_choosecity">按省份选择城市</string>
    <string name="choose_city">选择城市</string>
    <string name="base_setting_wallpaper_label">首页背景设置</string>
    <string name="base_setting_wallpaper">壁纸</string>
    <string name="wallpaper_setting_title">壁纸</string>
    <string name="wallpaper_set_success_tip">壁纸设置成功</string>
    <string name="wallpaper_set_failed_tip">壁纸设置失败</string>
    <string name="wallpaper_zoom_move_tip">缩放和移动</string>
    <string name="wallpaper_preview_tip">壁纸预览</string>
    <string name="wallpaper_open_error">图片打开失败，请重新选择</string>
    <string name="wallpaper_select_tip">请选择图片</string>
    <string name="choose_wallpaper_from_qqcalendar">选择软件自带壁纸</string>
    <string name="choose_wallpaper_from_gallery">从相册中选择</string>
    <string name="game_list_title">游戏提醒</string>
    <string name="game_event_list_appname">应用提醒</string>
    <string name="game_setting_title">游戏提醒设置</string>
    <string name="game_setting_no_disturb">免打扰设置</string>
    <string name="game_setting_no_disturb_desc">为了不打扰您休息，以上时间段推送消息无声</string>
    <string name="game_setting_sound">提示音设置</string>
    <string name="game_setting_time">提示时间设置</string>
    <string name="game_setting_timeInterval_info">时间段</string>
    <string name="game_setting_sound_info">提示音</string>
    <string name="game_setting_timeinterval_title">免打扰时间设置</string>
    <string name="game_setting_starttime_info">开始时间</string>
    <string name="game_setting_endtime_info">结束时间</string>
    <string name="game_setting_alarm_ontime">准时提醒</string>
    <string name="game_setting_alarm_1min">提前1分钟</string>
    <string name="game_setting_alarm_2min">提前2分钟</string>
    <string name="game_setting_alarm_5min">提前5分钟</string>
    <string name="game_setting_alarm_10min">提前10分钟</string>
    <string name="alarm_list_title">闹钟</string>
    <string name="event_list_title">提醒</string>
    <string name="birthday_list_title">生日提醒</string>
    <string name="birthday_import_title_qq">从QQ好友导入</string>
    <string name="birthday_import_title_pengyou">从朋友网导入</string>
    <string name="alarm_edit_title">编辑闹钟</string>
    <string name="alarm_edit_open">启用闹钟</string>
    <string name="alarm_edit_close">关闭闹钟</string>
    <string name="alarm_edit_time">时间</string>
    <string name="alarm_edit_repeat">重复</string>
    <string name="alarm_edit_repeat_none">无重复</string>
    <string name="no_repeat">无重复</string>
    <string name="alarm_edit_sound">声音</string>
    <string name="alarm_edit_sleep">小睡</string>
    <string name="alarm_edit_title_tag">标签</string>
    <string name="alarm_create_title">新建闹钟</string>
    <string name="alarm_getup">起床闹钟</string>
    <string name="alarm_sleep_none">无小睡</string>
    <string name="alarm_sleep_time_format">%d分钟</string>
    <string name="alarm_edit_time_title">设置时间</string>
    <string name="alarm_edit_repeat_title">重复设置</string>
    <string name="alarm_edit_sound_title">闹铃设置</string>
    <string name="alarm_edit_sleep_title">小睡设置</string>
    <string name="alarm_edit_tag_title">标签设置</string>
    <string name="alarm_sound_qingcuibugu">清脆布谷</string>
    <string name="alarm_sound_meilixinqing">美丽心情</string>
    <string name="alarm_sound_kuailetongnian">快乐童年</string>
    <string name="alarm_sound_system">音乐</string>
    <string name="alarm_sound_silence">静音</string>
    <string name="login_please_input_verifycode">请输入验证码</string>
    <string name="login_verify_title">输入验证</string>
    <string name="label_gregorian">公历</string>
    <string name="label_luna">农历</string>
</resources>