<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/edit_event_form" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.tencent.qqcalendar.view.TopBarWidget TopBarWidget:actionBtnImg="@drawable/btn_confirm" TopBarWidget:title="@string/edit_event_title" style="@style/style_topbar_widget"
      xmlns:TopBarWidget="http://schemas.android.com/apk/res/com.tencent.qqcalendar" />
    <ScrollView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/baseForm">
        <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="20.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:id="@id/edit_event_begin_time" android:background="@drawable/form_first_item" android:paddingLeft="13.0dip" android:paddingRight="13.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="46.0dip">
                    <TextView android:layout_gravity="center" android:id="@id/tv_edit_event_begin_time_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_begin" style="@style/baseFormItemLabel" />
                    <TextView android:gravity="right" android:layout_gravity="center" android:id="@id/tv_edit_event_begin_time" android:paddingLeft="9.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/baseFormItemContent" />
                    <ImageView android:layout_gravity="center" android:layout_width="20.0dip" android:layout_height="13.0dip" android:src="@drawable/more_right" android:contentDescription="@string/desc_set_begin_time" />
                </LinearLayout>
                <View android:background="@drawable/normal_div" android:layout_width="fill_parent" android:layout_height="1.0dip" />
                <LinearLayout android:id="@id/edit_event_end_time" android:background="@drawable/form_item" android:paddingLeft="13.0dip" android:paddingRight="13.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="46.0dip">
                    <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_end" style="@style/baseFormItemLabel" />
                    <TextView android:gravity="right" android:layout_gravity="center" android:id="@id/tv_edit_event_end_time" android:paddingLeft="9.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/baseFormItemContent" />
                    <ImageView android:layout_gravity="center" android:layout_width="20.0dip" android:layout_height="13.0dip" android:src="@drawable/more_right" android:contentDescription="@string/desc_set_end_time" />
                </LinearLayout>
                <View android:id="@id/edit_event_endtime_divider" android:background="@drawable/normal_div" android:layout_width="fill_parent" android:layout_height="1.0dip" />
                <RelativeLayout android:id="@id/edit_event_allday_switch" android:background="@drawable/form_item" android:paddingLeft="13.0dip" android:paddingRight="13.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="46.0dip">
                    <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_allday_event" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/baseFormItemLabel" />
                    <com.tencent.qqcalendar.view.CheckBoxBtn android:id="@id/edit_event_allday_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
                <View android:background="@drawable/normal_div" android:layout_width="fill_parent" android:layout_height="1.0dip" />
                <LinearLayout android:id="@id/edit_event_title" android:background="@drawable/form_last_item" android:paddingLeft="13.0dip" android:paddingRight="13.0dip" android:focusable="true" android:descendantFocusability="afterDescendants" android:layout_width="fill_parent" android:layout_height="46.0dip">
                    <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title" style="@style/baseFormItemLabel" />
                    <EditText android:gravity="left" android:layout_gravity="center" android:id="@id/et_edit_event_title" android:background="@null" android:paddingRight="22.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:hint="@string/please_input_title" android:singleLine="true" style="@style/baseFormItemLabel" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
                <LinearLayout android:id="@id/edit_event_before_remind" android:background="@drawable/form_first_item" android:paddingLeft="13.0dip" android:paddingRight="13.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="46.0dip">
                    <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remind" style="@style/baseFormItemLabel" />
                    <TextView android:gravity="right" android:layout_gravity="center" android:id="@id/tv_edit_event_remind" android:paddingLeft="22.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/event_remind_15min" android:layout_weight="1.0" style="@style/baseFormItemContent" />
                    <ImageView android:layout_gravity="center" android:layout_width="20.0dip" android:layout_height="13.0dip" android:src="@drawable/more_right" android:contentDescription="@string/desc_set_before_remind" />
                </LinearLayout>
                <View android:background="@drawable/normal_div" android:layout_width="fill_parent" android:layout_height="1.0dip" />
                <LinearLayout android:id="@id/edit_event_repeat" android:background="@drawable/form_item" android:paddingLeft="13.0dip" android:paddingRight="13.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="46.0dip">
                    <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cycle" style="@style/baseFormItemLabel" />
                    <TextView android:gravity="right" android:layout_gravity="center" android:id="@id/tv_edit_event_repeat" android:paddingLeft="22.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_edit_repeat_none" android:layout_weight="1.0" style="@style/baseFormItemContent" />
                    <ImageView android:layout_gravity="center" android:layout_width="20.0dip" android:layout_height="13.0dip" android:src="@drawable/more_right" android:contentDescription="@string/desc_set_repeat" />
                </LinearLayout>
                <View android:id="@id/id_repeat_divider" android:background="@drawable/normal_div" android:layout_width="fill_parent" android:layout_height="1.0dip" />
                <LinearLayout android:id="@id/edit_event_sound" android:background="@drawable/form_item" android:paddingLeft="13.0dip" android:paddingRight="13.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="46.0dip">
                    <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ring" style="@style/baseFormItemLabel" />
                    <TextView android:ellipsize="end" android:gravity="right" android:layout_gravity="center" android:id="@id/tv_edit_event_sound" android:paddingLeft="22.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_sound_silence" android:singleLine="true" android:layout_weight="1.0" style="@style/baseFormItemContent" />
                    <ImageView android:layout_gravity="center" android:layout_width="20.0dip" android:layout_height="13.0dip" android:src="@drawable/more_right" android:contentDescription="@string/desc_set_ringtone" />
                </LinearLayout>
                <View android:background="@drawable/normal_div" android:layout_width="fill_parent" android:layout_height="1.0dip" />
                <LinearLayout android:id="@id/edit_event_note" android:background="@drawable/form_last_item" android:paddingLeft="13.0dip" android:paddingRight="13.0dip" android:focusable="true" android:descendantFocusability="afterDescendants" android:layout_width="fill_parent" android:layout_height="46.0dip">
                    <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_note" style="@style/baseFormItemLabel" />
                    <EditText android:gravity="left" android:layout_gravity="center" android:id="@id/et_edit_event_note" android:background="@null" android:paddingRight="22.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:hint="@string/optional_input" android:singleLine="true" android:layout_weight="1.0" style="@style/baseFormItemLabel" />
                </LinearLayout>
            </LinearLayout>
            <Button android:id="@id/event_delete_btn" android:background="@drawable/red_btn" android:paddingLeft="13.0dip" android:paddingRight="13.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="46.0dip" android:layout_marginTop="18.0dip" android:text="@string/delete_event" style="@style/delete_btn_text" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
